--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "start": "gulp"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "include-media": "^1.4.9",
-    "jquery": "^3.3.1",
-    "bootstrap": "^4.0.0"
+    "jquery": "^3.3.1"
   }
 }
